--- a/faq.qmd
+++ b/faq.qmd
@@ -1,7 +1,7 @@
 ---
 title: Frequently Asked Questions
-subtitle: "BME253L (Fall 2025)"
-date: 2025-08-01
+subtitle: "BME290L (Spring 2026)"
+date: 2025-12-29
 format:
   html: default
   pdf: default
