--- a/course-syllabus.qmd
+++ b/course-syllabus.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Biomedical Electronic Measurements"
-subtitle: "BME253L (Fall 2025)"
+subtitle: "BME290L (Spring 2026)"
 format:
   html: default
   pdf: default
@@ -10,34 +10,33 @@ format:
 
 ### Instructor
 
-Dr. Mark Palmeri (`mlp6`)
+Dr. David Bradway (`dpb6`)
 
-* Email: [mark.palmeri@duke.edu](mailto:mark.palmeri@duke.edu)
-* [Ed Discussion](https://edstem.org/us/courses/81250)
-* Office Hours: Tues & Thurs, 14:30-15:30 (258 Hudson Hall Annex)
+* Email: [david.bradway@duke.edu](mailto:david.bradway@duke.edu)
+* [Ed Discussion](https://edstem.org/us/courses/90243)
+* Office Hours: Tues & Thurs, 14:30-15:30 (259 Hudson Hall Annex)
 
 ### Teaching Assistants
 
-* Erin O'Kane (Office Hours: Thurs, 12:30-14:30, CIEMAS 2559)
-* Olutoni Akintoye (Office Hours: Sat 12:00-15:00 & Sun 14:00-17:00, Wilkinson 130)
+* Darya Loiko (Office Hours: TBD)
 
 ::: callout-tip
-Questions that can be answered by Dr. Palmeri or a teaching assistant should be
-posted on [Ed Discussion](https://edstem.org/us/courses/81250/).
+Questions that can be answered by Dr. Bradway or a teaching assistant should be
+posted on [Ed Discussion](https://edstem.org/us/courses/90243/).
 :::
 
 ## Course Times & Locations
 
 ### Lecture
 
-Monday & Wednesday, 10:05-11:20, CIEMAS 1411 (Panopto recording **not** available)
+Monday & Wednesday, 3:05PM - 4:20PM, Hudson Hall 232 (Panopto recording **not** available)
 
 ### Labs
 
-Wednesday, 13:25-16:25, Hudson 028A (Basement)
+Tuesday, 13:25-16:25, Hudson 028A (Basement)
 
 Attendance and participation in all lab periods is required to pass this course.
-Labs can only be made up with **advanced** appoval from Dr. Palmeri.  Days/times
+Labs can only be made up with **advanced** appoval from Dr. Bradway.  Days/times
 to make up labs will be decided by your TA and Lab Instructor in advance of
 missing lab.
 
@@ -89,18 +88,18 @@ Upon completion of this course, students should be able to:
 
 ## Textbooks
 
-* **Required**: Practical Electronics for Inventors, Paul Scherz and Simon Monk. 3rd or 4th edition
+* **Recommended**: Practical Electronics for Inventors, Paul Scherz and Simon Monk. 3rd or 4th edition
 * [Lessons in Electic Circuits](http://www.ibiblio.org/kuphaldt/electricCircuits/) (Free Online)
 * Fundamentals of Electrical Engineering, Giorgio Rizzoni (First Edition or Second Edition, McGraw Hill, ISBN 9780073380377)
 * The Art of Electronics, Horowitz and Hill
 
 ## Learning Management System
 
-We will be using [Canvas](https://canvas.duke.edu/courses/61472) as the learning management
+We will be using [Canvas](https://canvas.duke.edu/courses/72521) as the learning management
 system for this course.  Most resources will be linked to the course website.
 All grades will be posted via Canvas/Gradescope.
 
-[Ed Discussion](https://edstem.org/us/courses/81250) will be used for general course questions and discussion.
+[Ed Discussion](https://edstem.org/us/courses/90243) will be used for general course questions and discussion.
 
 ## Class Schedule
 
@@ -131,12 +130,12 @@ updated throughout the semester in the table and calendar below.
 
 Class participation in lecture is strongly encouraged.  Students are responsible
 for obtaining missed lecture content from other students in the class.  All
-lecture slides/presented content will be made availabe online ([Canvas](https://canvas.duke.edu/courses/61472)).
+lecture slides/presented content will be made availabe online ([Canvas](https://canvas.duke.edu/courses/72521)).
 Our classroom this semester is not equipped for Panopto recording, so students
 who miss lecture will be responsible for getting lecture materials from fellow
 students.
 
-Participation on [Ed Discussion](https://edstem.org/us/courses/81250/) is also encouraged, in the form of:
+Participation on [Ed Discussion](https://edstem.org/us/courses/90243/) is also encouraged, in the form of:
 
 * Asking questions about the course material (ideally, publicly, so that others can benefit (Anonymous okay))
 * Answering questions from other students
@@ -194,7 +193,7 @@ regrade could lead to additional loss of credit when an assignment is
 re-evaluated.
 
 Some assignments will have an opportunity to be resubmitted based on grading
-feedback at the discretion of Dr. Palmeri.
+feedback at the discretion of Dr. Bradway.
 
 ### Late Policy / SDAO Accomodations
 
@@ -208,7 +207,7 @@ Students with SDAO accomodations for extended time on assignments can use this
 extended late submission window for all assignments.
 
 Any assignments submitted after the late submission window will only be accepted
-for partial credit at the discretion of Dr. Palmeri or if prior approval was
+for partial credit at the discretion of Dr. Bradway or if prior approval was
 sought **before the original (not extended) due date**.
 
 ## Duke Community Standard
@@ -216,7 +215,7 @@ sought **before the original (not extended) due date**.
 All students are expected to adhere to all principles of the 
 [Duke Community Standard](https://trinity.duke.edu/undergraduate/academic-policies/community-standard-student-conduct).
 Violations of the Duke Community Standard will be referred immediately to the
-Office of Student Conduct. Please do not hesitate to talk with Dr. Palmeri about
+Office of Student Conduct. Please do not hesitate to talk with Dr. Bradway about
 any situations involving academic honor, especially if it is ambiguous what
 should be done.
 
